# geoiters

./: README.md  example_usage.py  pyproject.toml
.github/workflows/: publish.yml  publish_pypi.yml
examples/: by_max_patch_area.py  by_rows_and_columns.py  tiles_iterator.py  with_multiprocessing.py
geoiters/: __init__.py  geoiters.py
geoiters/grid/: __init__.py  grid_iterator.py
geoiters/tiles/: __init__.py  map_tiles.py
geoiters/utils/: __init__.py  extent.py  utils.py
